<resources>
    <string name="app_name">Convertisseur</string>
    <string name="btn_quit">Quit</string>
    <string name="btn_conv">Converter</string>
    <string name="start_money">Starting currency</string>
    <string name="end_money">Arrival Currency</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="menu_Title">Available apps</string>
    <string-array name="listeDevises">
        <item />
        <item>Livre</item>
        <item>Euro</item>
        <item>Francs CFA</item>
        <item>Dollars US</item>
        <item>Yen</item>
        <item>Dirham</item>
    </string-array>
    <string-array name="listeDevisesBDD">
        <item />
    </string-array>
    <string name="opt_Option">Option</string>
    <string name="opt_convert">Converter</string>
    <string name="tmp_Temp">Temporary</string>
    <string name="opt_settings">Settings</string>
    <string name="opt_settings_date">Date</string>
    <string name="opt_settings_lang">Language</string>
    <string name="flag_desc">Localized country flag</string>
</resources>
