<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="afpa.convertisseur.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Spinner
        android:id="@+id/spinDeviseDepart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:entries="@string/listeDevises"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviseDep" />

    <Spinner
        android:id="@+id/spinDeviseArrivee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:entries="@string/listeDevises"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviseArriv"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tvDeviseDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_money"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tvDeviseArriv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_money"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/spinDeviseDepart"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_quit"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/spinDeviseArrivee"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_conv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_conv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_conv"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/spinDeviseArrivee"
        app:layout_constraintLeft_toRightOf="@+id/btn_quit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />
</android.support.constraint.ConstraintLayout>
